Minor style fix

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     /* Test-case related */
 
     #self-page .result {
-      background: red;
+      background: #f00;
     }
 
     #by-css .result {
